# Shop-Simulator-Test-Driven-Development

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  Doxyfile  README.md  cppcheck-suppresions.txt  flake.nix
workspace/: CMakeLists.txt  Makefile
workspace/include/: Cart.hpp  Kasa.hpp  Product.hpp  Promotion.hpp  Registry.hpp  World.hpp
workspace/src/: Cart.cpp  CartTests.cpp  Kasa.cpp  KasaTests.cpp  Product.cpp  ProductTests.cpp  Promotion.cpp  PromotionTests.cpp  PromotionsTests.cpp  Registry.cpp  RegistryTests.cpp  sampleTests.cpp
